# app

./: .gitignore  AGENTS.md  README.md  eyes.py  main.py  pyproject.toml  test.py
.github/workflows/: deploy.yml
backend/: .dockerignore  Dockerfile  app.py  ears.py  main.py  models.py  pyproject.toml
backend/services/: coach.py  realtime_stt.py  summarizer.py  transcriber.py
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ActionItems.tsx  CaptionView.tsx  CoachPanel.tsx  ParticipantCard.tsx  SummaryPanel.tsx
frontend/src/hooks/: useAudioCapture.ts  useFaceTracking.ts
frontend2/: vite.config.ts
frontend2/src/: App.css  App.tsx
frontend2/src/components/: ActionItems.tsx  CaptionView.tsx  SummaryPanel.tsx
