[project]
name = "side-quest-backend"
version = "0.1.0"
description = "Conversation companion API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "anthropic>=0.42.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
]
