[project]
name = "side-quest-backend"
version = "0.1.0"
description = "Conversation companion API"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.50.0",
    "fastapi>=0.115.0",
    "openai>=1.75.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "pydantic>=2.0",
    "pydub>=0.25.0",
    "elevenlabs[pyaudio]>=2.37.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.2",
    "speechrecognition>=3.14.5",
    "ty>=0.0.19",
    "ruff>=0.15.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
]
